--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,32 @@
+pipeline {
+    agent any
+
+    stages {
+        stage('Clone Repository') {
+            steps {
+                git 'https://github.com/your-username/your-repo.git'
+            }
+        }
+        
+        stage('Build') {
+            steps {
+                sh 'mvn clean package'  // If using Java & Maven
+                // sh 'npm install && npm run build'  // If using Node.js
+            }
+        }
+
+        stage('Test') {
+            steps {
+                sh 'mvn test'  // Run unit tests
+            }
+        }
+
+        stage('Deploy') {
+            steps {
+                sh 'scp target/*.war user@your-server:/var/lib/tomcat/webapps/'  // If using Tomcat
+                // sh 'docker build -t myapp . && docker run -d -p 80:80 myapp'  // If using Docker
+            }
+        }
+    }
+}
 
