--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git branch: 'master', url: 'https://github.com/Mhaskeadi17/ci-cd-pipeline.git'
+                git branch: 'master', url: 'https://github.com/Mhaskeadi17/ci-cd-pipeline'
             }
         }
         stage('Build') {
